Update frontend service type to web and environment to static.

--- a/render.yaml
+++ b/render.yaml
@@ -36,9 +36,9 @@ services:
           property: port
 
   # Frontend Static Site
-  - type: static
+  - type: web
     name: baby-shop-frontend
-    env: node
+    env: static
     buildCommand: "cd frontend && npm install && npm run build"
     publishDir: "frontend/dist"
     envVars:
