chore: Replace `publishDir` with `staticPublishPath` in Render configuration.

--- a/render.yaml
+++ b/render.yaml
@@ -40,7 +40,7 @@ services:
     name: baby-shop-frontend
     env: static
     buildCommand: "cd frontend && npm install && npm run build"
-    publishDir: "frontend/dist"
+    staticPublishPath: "frontend/dist"
     envVars:
       - key: VITE_API_URL
         fromService:
