feat: Implement Axios API client with dynamic base URL resolution and JWT auth, updating Render config to provide backend host.

--- a/render.yaml
+++ b/render.yaml
@@ -46,7 +46,7 @@ services:
         fromService:
           type: web
           name: baby-shop-backend
-          property: url
+          property: host
 
 databases:
   - name: baby-shop-db
